@@ -1,3 +1,7 @@
+2011-07-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Adapted layout of content element fields to match TYPO3 4.5 UI, resolves #28572
+
 2011-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Changed empty filter check to use new API, resolves #28288
